--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 <div class="menu-container">
     <button class="main-menu" onclick="toggleMenu()">☰ MENU</button>
     <div class="menu-items" id="menuItems">
-        <button id="adminBtn" class="off">ADMIN OFF</button>
+        <button id="adminBtn" class="off">⛔ ADMIN OFF 🔒</button>
         <div id="adminTools">
-            <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">TAMBAH WARGA</button>
-            <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">TAMBAH PEMASUKAN</button>
-            <button onclick="tambahBaris('KELUAR')" style="background:#d9534f; color:#fff;">TAMBAH PENGELUARAN</button>
+            <button onclick="tambahBaris('WARGA')" style="background:#28a745; color:#fff;">👤 TAMBAH WARGA</button>
+            <button onclick="tambahBaris('LAIN')" style="background:#17a2b8; color:#fff;">📥 TAMBAH PEMASUKAN</button>
+            <button onclick="tambahBaris('KELUAR')" style="background:#d9534f; color:#fff;">📤 TAMBAH PENGELUARAN</button>
             <button id="saveBtnManual" onclick="saveData()" style="background:#007bff; color:#fff;">💾 SIMPAN DATA</button>
-            <button id="pullBtn" class="warning" onclick="tarikSaldo()">TEMPEL SISA KAS </button>
-            <button id="listVisitorBtn" class="warning" onclick="openPengunjung()">DAFTAR PENGUNJUNG</button>
+            <button id="pullBtn" class="warning" onclick="tarikSaldo()">📝 TEMPEL SISA KAS</button>
+            <button id="listVisitorBtn" class="warning" onclick="openPengunjung()">👀 DAFTAR PENGUNJUNG</button>
         </div>
-        <button onclick="openChecklist()" class="primary">CHECKLIST KAS</button>
-        <button id="themeBtn" class="primary">GANTI TEMA</button>
-        <button id="cetakBtn" class="primary">CETAK LAPORAN</button>
+        <button onclick="openChecklist()" class="primary">✅ CHECKLIST KAS</button>
+        <button id="themeBtn" class="primary">🎨 GANTI TEMA</button>
+        <button id="cetakBtn" class="primary">🖨️ CETAK LAPORAN</button>
     </div>
 </div>
 
@@ -563,3 +563,4 @@ updateUI(); updateDeadlineBanner();
 </script>
 </body>
 </html>
+
