--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 
 <div id="checklistModal">
     <div style="text-align:center; margin-bottom:10px;">
-        <button onclick="closeChecklist()" style="background:#d9534f; color:#fff;">TUTUP [X]</button>
+        <button onclick="closeChecklist()" style="background:#d9534f; color:#fff;"> TUTUP </button>
         <button onclick="cetakChecklist()" style="background:var(--accent); color:#fff; margin-left:10px;">CETAK GAMBAR</button>
     </div>
     <div class="checklist-content" id="checklistPrintArea">
@@ -563,5 +563,6 @@ updateUI(); updateDeadlineBanner();
 </script>
 </body>
 </html>
+
 
 
