--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
 .theme-blue{--bg:#eef4ff;--text:#102040;--card:#fff}
 
 #checklistModal, #usulanModal { display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.9); z-index:2000; overflow-y:auto; padding:20px; box-sizing:border-box; }
-.checklist-content, .usulan-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:950px; margin:0 auto; }
+.checklist-content, .usulan-content { background:#fff; color:#000; padding:20px; border-radius:10px; max-width:980px; margin:0 auto; }
 .usulan-content h1 { text-align:center; background:#ff9800; color:#fff; padding:10px; margin:0; }
 .usulan-btn-container { display:flex; justify-content:center; gap:10px; margin:15px 0; }
 .btn-buat { background:#2196F3; color:#fff; padding:10px 20px; }
@@ -269,6 +269,7 @@ input{padding:4px;border-radius:6px;border:1px solid #ccc;width:100%;box-sizing:
                     <th style="width:20%">NAMA</th>
                     <th style="width:35%">USULAN</th>
                     <th style="width:30%">RESPON</th>
+                    ${isAdmin ? '<th style="width:50px">HPS</th>' : ''}
                 </tr>
             </thead>
             <tbody id="tbUsulan"></tbody>
@@ -362,11 +363,11 @@ function selesaiRespon() { modeRespon = false; document.getElementById('containe
 
 function loadUsulan() {
     const tb = document.getElementById('tbUsulan');
-    tb.innerHTML = "<tr><td colspan='4' style='text-align:center'>Memuat data usulan...</td></tr>";
-    db.ref('usulan_warga').once('value', s => {
+    tb.innerHTML = "<tr><td colspan='5' style='text-align:center'>Memuat data usulan...</td></tr>";
+    db.ref('usulan_warga').on('value', s => {
         const d = s.val();
         tb.innerHTML = "";
-        if(!d) return tb.innerHTML = "<tr><td colspan='4' style='text-align:center'>Belum ada usulan masuk.</td></tr>";
+        if(!d) return tb.innerHTML = "<tr><td colspan='5' style='text-align:center'>Belum ada usulan masuk.</td></tr>";
         
         Object.keys(d).reverse().forEach(id => {
             const u = d[id];
@@ -392,6 +393,7 @@ function loadUsulan() {
                         ` : ''}
                     </div>
                 </td>
+                ${isAdmin ? `<td style="text-align:center"><button onclick="hapusUsulan('${id}')" style="background:#d9534f; color:#fff; border-radius:4px; padding:5px;">🗑️</button></td>` : ''}
             `;
             tb.appendChild(tr);
         });
@@ -399,9 +401,14 @@ function loadUsulan() {
 }
 
 function vote(id, tipe) {
-    db.ref(`usulan_warga/${id}/${tipe}`).push(currentUserName).then(() => {
-        loadUsulan();
-    });
+    db.ref(`usulan_warga/${id}/${tipe}`).push(currentUserName).then(() => { loadUsulan(); });
+}
+
+function hapusUsulan(id) {
+    if(!isAdmin) return;
+    if(confirm("HAPUS USULAN INI, TUAN?")) {
+        db.ref(`usulan_warga/${id}`).remove().then(() => { alert("TERHAPUS!"); });
+    }
 }
 
 function updateUsulanAdmin(id, field, value) {
